# sac-ia_icp

./: .e155010a7f4c80f9b9c923011b93207713a462a.cam  CMakeLists.txt  cluster_0.pcd  cluster_1.pcd  icp0.pcd  icp1.pcd  icp2.pcd  icp3.pcd  icp_0.pcd  icp_1.pcd  icp_2.pcd  model_aligned_0.pcd  model_aligned_1.pcd  sence_after_extract.pcd
data_nobase/: big.txt  china.txt  model_big_new.pcd  model_big_nobase.pcd  model_china_nobase.pcd  model_small_new.pcd  model_small_nobase.pcd  object_templates.txt  object_templates.txt~  plate_china_model_new.pcd  small.txt
ply/: one_food.ply  test3.ply  test4.ply  two_food_tool.ply
src/: iterative_closest_point.cpp
src/libForPCL/include/: alignment.h  cook_basis.h  cook_geometry.h  cook_io.h  cook_seg.h
src/libForPCL/src/: alignment.cpp  cook_basis.cpp  cook_geometry.cpp  cook_io.cpp  cook_seg.cpp
